refactored to silence warnings